--- a/index.html
+++ b/index.html
@@ -70,39 +70,33 @@
   </div>
 
 <div class="paragraph-container">
-  <div class="paragraph-one">
-    <h2 class="title-1">GET STARTED TODAY<h2>
+  <div class="paragraph-left">
+    <h2 class="title">GET STARTED TODAY<h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
     consequat. Duis aute irure dolor in reprehenderit in voluptate velit. </p>
-  </div>
-    <div class="paragraph-container">
-    <div class="paragraph-two">
-    <h2 class="title-2">PAY MONTHLY OR ANNUALLY<h2>
+    <h2 class="title-support">24/7 CUSTOMER SUPPORT<h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
     consequat.</p>
-    </div>
-    </div>
-    <div class="paragraph-container">
-  <div class="paragraph-three">
-    <h2 class="title-3">24/7 CUSTOMER SUPPORT<h2>
-    <p> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
   </div>
-    <div class="paragraph-container">
-    <div class="paragraph-four">
-    <h2 class="title-4">CANCEL YOUR PLAN ANYTIME<h2>
+  
+  <div class="paragraph-right">
+    <h2 class="title">PAY MONTHLY OR ANNUALLY<h2>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+    tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+    quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+    consequat. Duis aute irure dolor in reprehenderit in voluptate velit. </p>
+    <h2 class="title-plan">CANCEL YOUR PLAN ANYTIME<h2>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
     tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
     quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
     consequat.</p>
-    </div>
-    </div>
+  </div>
 </div>
+
 </body>
 
 <footer> <span class="try-now">Try now</span> for 14 days. No credit card required. Header image courtesy of <span class="unsplash">Unsplash</span></footer>
