--- a/index.html
+++ b/index.html
@@ -37,6 +37,9 @@
           <li>1 database</li>
           <li>Unlimited bandwidth</li>
         </ul>
+        <div class="button-border">
+          <a href="#" class="myButton">Choose</a>
+        </div>
       </li>
       <li class="box">
         <div class="mainbox mainbox-blue">
@@ -52,6 +55,9 @@
           <li>1 database</li>
           <li>Unlimited bandwidth</li>
         </ul>
+        <div class="button-border">
+          <a href="#" class="myButton">Choose</a>
+        </div>
       </li>
       <li class="box">
         <div class="mainbox mainbox-black">
@@ -67,6 +73,9 @@
           <li>1 database</li>
           <li>Unlimited bandwidth</li>      
         </ul>
+        <div class="button-border">
+          <a href="#" class="myButton">Choose</a>
+        </div>
   </div>
 
 <div class="paragraph-container">
